--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -195,7 +195,8 @@
     font-weight: 600;
     color: #ffffff;
     margin: 10px 0;
-    text-align: left;
+    text-align: center;
+    padding: 0 10px;
 }
 
 .carousel-card .card-description {
@@ -205,7 +206,8 @@
     color: rgba(118, 118, 118, 1);
     line-height: 1.3;
     margin: 0;
-    text-align: left;
+    text-align: center;
+    padding: 0 10px;
 }
 
 .carousel-btn {
@@ -226,11 +228,11 @@
 }
 
 .prev-btn {
-    left: -60px;
+    left: 10px;
 }
 
 .next-btn {
-    right: -60px;
+    right: 10px;
 }
 
 .carousel-btn:hover {
@@ -280,14 +282,14 @@
     .cards-header {
         display: grid;
         height: 13%;
-        margin-top: 20px;
+        margin-top: 5px;
     }
     .cards-header-title{
         font-size: clamp(1.5rem, 2vw, 2rem);
     }
     .cards-header-subtitle{
         width: 90%;
-        margin-top: 35px;
+        margin-top: 8px;
     }
     
     .carousel-btn {
@@ -296,11 +298,11 @@
     }
     
     .prev-btn {
-        left: -45px;
+        left: -10px;
     }
     
     .next-btn {
-        right: -45px;
+        right: -10px;
     }
     
     .carousel-container {
